apps/amt/migration/chivel/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chisel-server
spec:
  type: ClusterIP
  selector:
    app: chisel-server
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
