apps/amt/migration/chivel/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chisel-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: set-in-overlay
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chisel-server
            port:
              number: 8080
  tls:
  - hosts:
    - set-in-overlay
    secretName: chisel-tls
